crates/reinhardt-pages/tests/ui/form/fail/optgroup_rejects_nested_group.stderr
error: nested OptGroup is not supported
  --> tests/ui/form/fail/optgroup_rejects_nested_group.rs:11:6
   |
11 |                     OptGroup("Inner") {
   |                     ^^^^^^^^
